# Lyra-Samples

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
Samples/DepthTest/: CMakeLists.txt  README.md  main.cpp
Samples/StencilTest/: CMakeLists.txt  README.md  main.cpp
Samples/Triangle/: CMakeLists.txt  README.md  main.cpp  shader.slang
Samples/Window/: CMakeLists.txt  README.md  main.cpp  shader.slang
